--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+
+.container{
+ width: 500px;
+ text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.card-header{
+  background-color:darkseagreen;
   color: white;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.card-footer{
+  background-color: darkseagreen;
+  color: white;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-body{
+  padding: 30px;
+  background-color: linen;
+}
+
+.unit-control{
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+}
+
+.unit{
+  background-color: darkseagreen;
+  color: white;
+  padding: 10px;
+}
+
+.converter{
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+
 }
