--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.app{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color:teal;
+}
 
 .container{
  width: 500px;
